--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = {extras = ["standard"], version = "^0.128.7"}
 pydantic = "^2.12.5"
 pydantic-settings = "^2.12.0"
 asyncpg = "^0.31.0"
+sqlalchemy = "^2.0.46"
 
 
 [build-system]
