--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^2.12.5"
 pydantic-settings = "^2.12.0"
 asyncpg = "^0.31.0"
 sqlalchemy = "^2.0.46"
+alembic = "^1.18.4"
 
 
 [build-system]
