--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pydantic-settings = "^2.12.0"
 asyncpg = "^0.31.0"
 sqlalchemy = "^2.0.46"
 alembic = "^1.18.4"
+pyjwt = {extras = ["crypto"], version = "^2.11.0"}
+bcrypt = "^5.0.0"
+python-multipart = "^0.0.22"
 
 
 [build-system]
